--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 .top {
 
     background-color: #1F2937;
-    padding:20px;
+    padding:80px;
     align-items:center;
+    
 
 }
 
@@ -124,6 +125,7 @@ border-style:none;
     align-items:center;
     flex-direction:column;
     gap:20px;
+    padding:80px;
 
 
 }
@@ -168,6 +170,42 @@ gap:40px;
     display:flex;
     width:200px;
     text-align:center;
+
+
+}
+
+
+.thirdlayer {
+
+    display:flex;
+    background-color: #E5E7EB;
+    justify-content:center;
+    padding:80px;
+
+
+
+}
+
+.thirdt {
+
+    display:flex;
+    font-size:36px;
+    text-align:center;
+    max-width:900px;
+
+
+}
+
+
+.thirdThor {
+
+    display:flex;
+    justify-content:flex-end;
+    align-self:flex-end;
+    font-size:18px;
+    font-weight:700;
+    margin-left:-200px;
+
 
 
 }
