--- a/style.css
+++ b/style.css
@@ -3,8 +3,19 @@ body {
 
 font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
+}
+
+.whole {
+
+    width:max-content;
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
+
+
 
 }
+
 
 
 .top {
@@ -39,6 +50,7 @@ justify-content:space-between;
     align-self:flex-start;
     justify-self: flex-start;
     margin-left:160px;
+    margin-top:-90px;
 
 }
 
@@ -48,6 +60,7 @@ justify-content:space-between;
     justify-content:flex-end;
     gap:15px;
     margin-right:200px;
+    margin-top:-90px;
 
 }
 
@@ -63,6 +76,7 @@ justify-content:space-between;
     display:flex;
     justify-content:space-between;
     align-items:center;
+    gap:20px;
 
 
 }
@@ -105,16 +119,18 @@ margin-top:-25px;
 
 .signup {
 
-display:flex;
-background-color: #3882F6;
-color:white;
-margin-left:200px;
-padding-left:13px;
-padding-right:13px;
-padding-top:4px;
-padding-bottom:4px;
-border-radius:25px;
-border-style:none;
+
+    margin-left:200px;
+    display:flex;
+    background-color: #3882F6;
+    color:#F9FAF8;
+    border-radius:5px;
+    border: 2px solid #3882F6;
+    align-self:center;
+    padding-left:20px;
+    padding-right:20px;
+    padding-top:5px;
+    padding-bottom:5px;
     
 }
 
@@ -207,5 +223,81 @@ gap:40px;
     margin-left:-200px;
 
 
+
+}
+
+.fourthlayer {
+
+    display:flex;
+    padding:50px;
+    justify-content:center;
+    align-items:center;
+
+}
+
+.fourthbluelayer {
+
+
+    display:flex;
+    padding:25px;
+    background-color: #3882F6;
+    border-radius: 10px;
+    width:1000px;
+    justify-content:space-around;
+}
+
+
+.fourtht {
+
+    display:flex;
+    flex-direction: column;
+
+
+
+
+}
+
+
+.call {
+
+    display:flex;
+    color:#F9FAF8;
+    font-size:25px;
+    font-weight:800;
+
+
+}
+
+.callsmall {
+
+    display:flex;
+    color:#E5E7EB;
+    font-size:18px;
+    margin-top:-25px;
+
+}
+
+
+.fourthright {
+
+    display:flex;
+
+
+}
+
+
+.signup2 {
+
+    display:flex;
+    background-color: #3882F6;
+    color:#F9FAF8;
+    border-radius:5px;
+    border: 2px solid #F9FAF8;
+    align-self:center;
+    padding-left:20px;
+    padding-right:20px;
+    padding-top:5px;
+    padding-bottom:5px;
+    justify-content:center;
 
 }
