--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
 
-font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-family: roboto, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 }
 
